[gd_scene load_steps=11 format=3 uid="uid://cwfyh8flqa8rk"]

[ext_resource type="Script" path="res://card/card_states/CardInPlay.gd" id="1_nshbd"]
[ext_resource type="Texture2D" uid="uid://dfqpr30rdgsec" path="res://assets/card_images/passion/Gorilla.png" id="2_otdqy"]
[ext_resource type="LabelSettings" uid="uid://dq5kctg5dkitl" path="res://styling/labels/PassionLabel.tres" id="4_734v1"]
[ext_resource type="LabelSettings" uid="uid://nx6f46ywtswa" path="res://styling/labels/ImaginationLabel.tres" id="5_k068k"]
[ext_resource type="LabelSettings" uid="uid://ihox33scd0t8" path="res://styling/labels/GrowthLabel.tres" id="6_2vrch"]
[ext_resource type="LabelSettings" uid="uid://bpbd72h7s4e60" path="res://styling/labels/LogicLabel.tres" id="7_88nyc"]
[ext_resource type="PackedScene" uid="uid://c32bmd2ws8smt" path="res://card/card_assets/BattleStatsContainer.tscn" id="7_l6o0h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ky8fg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_kk6x1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycx8i"]
bg_color = Color(0.741385, 0.741385, 0.741384, 1)

[node name="CardInPlay" type="PanelContainer"]
z_as_relative = false
custom_minimum_size = Vector2(200, 200)
anchors_preset = -1
anchor_right = 0.174
anchor_bottom = 0.309
offset_right = -0.447998
offset_bottom = -0.231995
theme_override_styles/panel = SubResource("StyleBoxFlat_ky8fg")
script = ExtResource("1_nshbd")

[node name="CardImage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_otdqy")
expand_mode = 3

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="TopInfo" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
mouse_filter = 2

[node name="CardNameBG" type="Panel" parent="VBox/TopInfo"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2

[node name="CardName" type="Label" parent="VBox/TopInfo/CardNameBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "Animal"
label_settings = SubResource("LabelSettings_kk6x1")

[node name="Costs" type="Panel" parent="VBox/TopInfo"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ycx8i")

[node name="CostLabels" type="HBoxContainer" parent="VBox/TopInfo/Costs"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Passion" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("4_734v1")

[node name="Imagination" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("5_k068k")

[node name="Growth" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("6_2vrch")

[node name="Logic" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("7_88nyc")

[node name="BattleStatsContainer" parent="VBox" instance=ExtResource("7_l6o0h")]
layout_mode = 2
size_flags_vertical = 10

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
